# Roland-m380-wireless-controller

./: README.md  TODO.md  listener.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.py  test_channel.py  test_client.py  test_server.py
interface/: package-lock.json  package.json
interface/src/: App.js  ChannelSimple.jsx  Fader.jsx  socket.js
interface/src/channel/: ChannelLinked.jsx  ChannelSelectButton.jsx  ChannelSettings.Module.css  ChannelSettings.jsx  ChannelSimple.jsx  ChannelUtil.js  ChannelsControl.jsx
interface/src/channel/panel/: InputBoardPanel.jsx  NameInput.jsx
interface/src/layout/: StatusBar.jsx
interface/src/util/: Fader.jsx  PropertyControl.jsx  PropertySwitch.jsx
server/: __init__.py  app.py  main.py  server.py  test.py  test_channel.py
server/desk/: __init__.py  channel.py  desk.py  desk_connection.py  desk_controller.py  input.py
server/message/: __init__.py  channel_message.py  fader_message.py  input_board_message.py  input_patchbay_message.py  message.py  message_controller.py  mute_message.py  sysexc_message.py
server/web_interface/: __init__.py  channel_interface.py  server.py  user_client.py  user_controller.py
src/: app.py  server.py  test_channel.py
src/desk/: __init__.py  channel.py  desk.py  desk_connection.py  desk_controller.py  listener.py
src/interface/: __init__.py  listener.py
src/message/: __init__.py  fader_message.py  message.py
