[build-system]
requires = ["setuptools", "setuptools-scm", "cython ~= 0.29.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usb-MIDI"
authors = [
    {name = "Thomas Crundwell", email = "unspecificed@unspecificed.com"},
]
description = "My package description"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "mido",
    'flask',
    "python-rtmidi",
]
dynamic = ["version"]

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
start-server = "my_package.module:function"

[tool.setuptools]
packages = ["server"]

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/